--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@ quartes( 96% of songs have 4 quarters ):
 <input id="quartes" placeholder="quartes"type="number" value="4">
 number of tacts:
 <input id="tacts"type="number" >
-<span id="tactsPlace">0 </span> tacts will take around <span id="second"></span> seconds
+<span id="tactsPlace">0 </span> tacts will take around <span id="second">0</span> seconds
 or enter name of the track:
 
-<input type="text" id="track">
+<input type="text" id="track" list="<list>">
+<datalist id="<list>"></datalist>
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
 </body>
